# pro-hc-em

./: CMakeLists.txt  main.cpp
core/: polygon.cpp  polygon.h
ui/: MainMenu.cpp  MainMenu.h  triangle.cpp  triangle.h
